# WiseneAnomalyDetection

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  requirements.txt
include/obstructionPredictor/: ad_utils.h  obstructionPredictor.hpp
obstructionPredictor/: ad_utils.h  obstructionPredictor.cpp
report/: CMakeLists.txt  analiza-danych.tex  bibliography.bib  final_report.tex  generate_image_intro.py  img_diff_dist.tex  img_diff_dist_small.tex  img_diff_time.tex  img_dist.tex  metodologia-i-algorytm.tex  realizacja.tex  wstep.tex
src/: main.cpp
src/obstructionPredictor/: ad_utils.cpp  obstructionPredictor.cpp
tests/: CMakeLists.txt  obstructionPredictor_test.cpp
